--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@ body {
   height: 100%;
 }
 
+.banner-section-detail {
+  background-image: url(../public/images/banner-detail.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+}
+
 body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
